aks-bicep-agic/k8s/node-hello.yaml
apiVersion: v1
kind: Pod
metadata:
  name: node-hello
  labels:
    app: node-hello
spec:
  containers:
  - image: gcr.io/google-samples/node-hello:1.0
    name: hello-world
    ports:
    - containerPort: 8080
      protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: node-hello
spec:
  selector:
    app: node-hello
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
