aks-bicep-agic/k8s/ing-agic.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ing-agic
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: nginx-52-188-74-208.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-svc
          servicePort: 80
  - host: httpd-52-188-74-208.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: httpd-svc
          servicePort: 80
  - http:
      paths:
      - path: /
        backend:
          serviceName: aspnetapp
          servicePort: 80
      - path: /node
        backend:
          serviceName: node-hello
          servicePort: 80
